--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,34 +12,40 @@
 # Stages run in sequential order, but jobs within stages run in parallel.
 #
 # For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
+image: docker.io/jordanhall/pintos:version1
+
 
 stages:          # List of stages for jobs, and their order of execution
   - build
   - test
-  - deploy
+  
 
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - echo "Compiling the code..."
+    - make -C src/devices -j$(( $(nproc --all) - 1 )) -WError -Wno-unused-parameter -Wno-unused-function
+   # - make -C src/threads -j$(( $(nproc --all) - 1 )) -WError -Wno-unused-parameter -Wno-unused-function
     - echo "Compile complete."
+  rules:
+    - when: manual
+  
 
 unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
-    - echo "Running unit tests... This will take about 60 seconds."
-    - sleep 60
-    - echo "Code coverage is 90%"
+    - echo "Testing"
+    - make -C src/devices check -j$(( $(nproc --all) - 1 ))
+   # - make -C src/threads check -j$(( $(nproc --all) - 1 ))
+  rules:
+    - when: manual
 
 lint-test-job:   # This job also runs in the test stage.
   stage: test    # It can run at the same time as unit-test-job (in parallel).
   script:
+    # Linting not yet available, will be added soon.
     - echo "Linting code... This will take about 10 seconds."
-    - sleep 10
+    # - make -C src/devices lint -j$(( $(nproc --all) - 1 ))
     - echo "No lint issues found."
-
-deploy-job:      # This job runs in the deploy stage.
-  stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
-  script:
-    - echo "Deploying application..."
-    - echo "Application successfully deployed."
+  rules:
+    - when: manual
