--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,8 @@ build-job:       # This job runs in the build stage, which runs first.
     - make -C src/devices -j$(( $(nproc --all) - 1 )) -WError -Wno-unused-parameter -Wno-unused-function
     - make -C src/threads -j$(( $(nproc --all) - 1 )) -WError -Wno-unused-parameter -Wno-unused-function
     - echo "Compile complete."
-  rules:
-    - when: manual
+  only:
+    - merge_requests
   
 
 unit-test-job:   # This job runs in the test stage.
@@ -37,6 +37,8 @@ unit-test-job:   # This job runs in the test stage.
     - echo "Testing"
     - if [[ $(make -C src/devices check -j$(($(nproc --all)-1 ))) =~ "FAIL" ]]; then exit 123; else echo "Test success"; fi
     # - if [[ $(make -C src/threads check -j$(($(nproc --all)-1 )) -WError -Wno-unused-parameter -Wno-unused-function) =~ "FAIL" ]]; then exit 123; else echo "Test success"; fi
+  only:
+    - merge_requests
 
 lint-test-job:   # This job also runs in the test stage.
   stage: test    # It can run at the same time as unit-test-job (in parallel).
@@ -45,3 +47,5 @@ lint-test-job:   # This job also runs in the test stage.
     - echo "Linting code"
     - make lint
     - echo "No lint issues found."
+  only:
+    - merge_requests
