--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,8 +24,8 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - echo "Compiling the code..."
-    - make -C src/devices -j$(( $(nproc --all) - 1 )) -WError -Wno-unused-parameter -Wno-unused-function
-    - make -C src/threads -j$(( $(nproc --all) - 1 )) -WError -Wno-unused-parameter -Wno-unused-function
+    - make -C src/devices -j$(nproc --all) -WError -Wno-unused-parameter -Wno-unused-function
+    - make -C src/threads -j$(nproc --all) -WError -Wno-unused-parameter -Wno-unused-function
     - echo "Compile complete."
   only:
     - merge_requests
@@ -36,7 +36,7 @@ unit-test-devices:   # This job runs in the test stage.
   script:
     - echo "Testing Devices"
     - echo "Number of threads running is $(nproc --all)"
-    - if [[ $(make -C src/devices check -j$(nproc --all) =~ "FAIL" ]]; then exit 123; else echo "Test success"; fi
+    - if [[ $(make -C src/devices check -j$(nproc --all) ) =~ "FAIL" ]]; then exit 123; else echo "Test success"; fi
   only:
     - merge_requests
 
@@ -45,7 +45,7 @@ unit-test-threads:   # This job runs in the test stage.
   script:
     - echo "Testing"
     - echo "Number of threads running is $(nproc --all)"
-    - if [[ $(make -C src/threads check -j$(nproc --all) =~ "FAIL" ]]; then exit 123; else echo "Test success"; fi
+    - if [[ $(make -C src/threads check -j$(nproc --all) ) =~ "FAIL" ]]; then exit 123; else echo "Test success"; fi
   only:
     - merge_requests
 
