--- a/src/Makefile.build
+++ b/src/Makefile.build
@@ -48,20 +48,21 @@ lib_SRC += lib/arithmetic.c		# 64-bit arithmetic for GCC.
 lib_SRC += lib/ustar.c			# Unix standard tar format utilities.
 
 # Kernel-specific library code.
-lib/kernel_SRC  = lib/kernel/debug.c	# Debug helpers.
-lib/kernel_SRC += lib/kernel/list.c	# Doubly-linked lists.
-lib/kernel_SRC += lib/kernel/bitmap.c	# Bitmaps.
-lib/kernel_SRC += lib/kernel/hash.c	# Hash tables.
-lib/kernel_SRC += lib/kernel/console.c	# printf(), putchar().
+lib/kernel_SRC  = lib/kernel/debug.c   # Debug helpers.
+lib/kernel_SRC += lib/kernel/list.c	   # Doubly-linked lists.
+lib/kernel_SRC += lib/kernel/vector.c  # Vector
+lib/kernel_SRC += lib/kernel/bitmap.c  # Bitmaps.
+lib/kernel_SRC += lib/kernel/hash.c	   # Hash tables.
+lib/kernel_SRC += lib/kernel/console.c # printf(), putchar().
 lib/kernel_SRC += lib/kernel/priority_queue.c # Priority queues
 
 # User process code.
-userprog_SRC  = userprog/process.c	# Process loading.
-userprog_SRC += userprog/pagedir.c	# Page directories.
-userprog_SRC += userprog/exception.c	# User exception handler.
-userprog_SRC += userprog/syscall.c	# System call handler.
-userprog_SRC += userprog/gdt.c		# GDT initialization.
-userprog_SRC += userprog/tss.c		# TSS management.
+userprog_SRC  = userprog/process.c	 # Process loading.
+userprog_SRC += userprog/pagedir.c	 # Page directories.
+userprog_SRC += userprog/exception.c # User exception handler.
+userprog_SRC += userprog/syscall.c	 # System call handler.
+userprog_SRC += userprog/gdt.c		 # GDT initialization.
+userprog_SRC += userprog/tss.c		 # TSS management.
 
 # No virtual memory code yet.
 #vm_SRC = vm/file.c			# Some file.
