--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,7 @@ build-job:       # This job runs in the build stage, which runs first.
     - make -C src/devices -j$(nproc --all) -WError -Wno-unused-parameter -Wno-unused-function
     - make -C src/threads -j$(nproc --all) -WError -Wno-unused-parameter -Wno-unused-function
     - make -C src/userprog -j$(nproc --all) -WError -Wno-unused-parameter -Wno-unused-function
+    - make -C src/vm -j$(nproc --all) -WError -Wno-unused-parameter -Wno-unused-function
     - echo "Compile complete."
   only:
     - merge_requests
@@ -56,6 +57,15 @@ unit-test-userprog:   # This job runs in the test stage.
     - echo "Testing"
     - echo "Number of threads running is $(nproc --all)"
     - if [[ $(make -C src/userprog check -j$(nproc --all) ) =~ "FAIL" ]]; then exit 123; else echo "Test success"; fi
+  only:
+    - merge_requests
+
+unit-test-vm:   # This job runs in the test stage.
+  stage: test    # It only starts when the job in the build stage completes successfully.
+  script:
+    - echo "Testing"
+    - echo "Number of threads running is $(nproc --all)"
+    - if [[ $(make -C src/vm check -j$(nproc --all) ) =~ "FAIL" ]]; then exit 123; else echo "Test success"; fi
   only:
     - merge_requests
 
